Mejora de detalles en frontend, queda por hacerparte de frontend de editar ordenes.

--- a/Frontend/Menu.html
+++ b/Frontend/Menu.html
@@ -65,7 +65,7 @@
     </select>
   </div>
 
-  <div class="filter-item">
+  <div class="filter-item-btn">
     <button id="reset-filters" class="btn btn-secondary w-100">
       <i data-lucide="brush-cleaning"></i> Limpiar filtros
       
@@ -155,7 +155,6 @@
         <strong id="cart-total-amount" class="total-value">$0.00</strong>
     </div>
 
-
   <button type="submit" class="order-submit-btn">Confirmar Pedido</button>
 </form>
 
@@ -201,18 +200,6 @@
 
 <script src="https://unpkg.com/lucide"></script>
 <script src="./js/app.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-    
 
 </body>
 </html>
